actualizando la rama master

--- a/proyecto_pendejo/templates/aventura.html
+++ b/proyecto_pendejo/templates/aventura.html
@@ -1,201 +1,15 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Juegos de aventura
+    Juegos de aventura
 {% endblock %}
 
 {% block main %}
-<div class="container-cards">
-    <table>
-        <tr>
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/bloxd.io" style="text-decoration: none; color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/bloxdhop-io/20210419140415/bloxdhop-io-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Bloxd.io" width="178" height="100">
-                            <h4>Bloxd.io</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
+<div class="container-games">
+    <div class="game1">
+        <div class="box">
 
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/haven-dock" style="text-decoration: none;color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/games/havendock/cover-1663923429477.png?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Havendock" width="178" height="100">
-                            <h4>Haven Dock</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/a-tower-in-the-forest" style="text-decoration: none; color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/a-tower-in-the-forest/20221102172807/a-tower-in-the-forest-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="A Tower in the Forest" width="178" height="100">
-                            <h4>A Tower Forest</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/coma" style="text-decoration: none; color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/games/coma/cover-1636110072147.png?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Coma" width="178" height="100">
-                            <h4>Coma</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/glitcheon" style="text-decoration: none; color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/glitcheon/20210712102430/glitcheon-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Glitcheon" width="178" height="100">
-                            <h4>Glitcheon</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/is-today-another-day" style="text-decoration: none;color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/is-today-another-day/20220316014336/is-today-another-day-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Is Today Another Day?" width="178" height="100">
-                            <h4>Another Day?</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/heraclos" style="text-decoration: none;color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/heraclos.png?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Heraclos" width="178" height="100">
-                            <h4>Heraclos</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/steve-s-world"style="text-decoration: none;color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/steve-s-world/20211120102359/steve-s-world-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Steve's World" width="178" height="100">
-                            <h4>Steve´s World</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/prince-of-persia" style="text-decoration: none; color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/games/prince-of-persia-1990/cover-1669317712385.png?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Prince of Persia 1990" width="178" height="100">
-                            <h4>prince of persia</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/spooky-island" style="text-decoration: none; color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/spooky-island/20220901151947/spooky-island-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Spooky Island" width="178" height="100">
-                            <h4>Spooky Island</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-        </tr>
-
-
-        <tr>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/revenot-roguelike-action-rpg" style="text-decoration: none;color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/revenot-roguelike-action-rpg/20220922140532/revenot-roguelike-action-rpg-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Revenot" width="178" height="100">
-                            <h4>Revenot</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/kity-builder" style="text-decoration: none;color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/kity-builder/20210504122712/kity-builder-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Kity Builder" width="178" height="100">
-                            <h4>Kity Builder</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/fantasmicidio" style="text-decoration: none; color: white;">
-                            <img class=" lazy" src="https://cn.i.cdn.ti-platform.com/content/334/ghost-blast/game/es/es-logo.b81063ae.jpg?imwidth=300" data-src="https://cn.i.cdn.ti-platform.com/content/334/ghost-blast/game/es/es-logo.b81063ae.jpg?imwidth=300" alt="Fantasmacidio" width="300" height="">
-                            <h4>Fantasmicidio</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/cat-mario" style="text-decoration: none; color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/games/cat-mario/thumb-1594456020369.png?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="Cat Mario" width="178" height="100">
-                            <h4>Cat Mario</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <div class="card text-center" style="border: transparent; background: none;">
-                    <div class="card-body"
-                        style="text-transform: uppercase; display: flex; justify-content: center; align-items: center;">
-                        <a href="/aventura/midnight-remastered" style="text-decoration: none; color: white;">
-                            <img class="GameThumbImage" loading="lazy" src="https://images.crazygames.com/midnight-remastered/20220825115530/midnight-remastered-cover?auto=format%2Ccompress&amp;q=45&amp;cs=strip&amp;ch=DPR&amp;w=178&amp;h=100&amp;fit=crop" decoding="async" alt="MIDNIGHT Remastered" width="178" height="100">
-                            <h4>midnight remasted</h4>
-                        </a>
-                    </div>
-                </div>
-            </td>
-        </tr>
-    </table>
+        </div>
+    </div>
 </div>
 {% endblock %}
