--- a/proyecto_pendejo/templates/index.html
+++ b/proyecto_pendejo/templates/index.html
@@ -13,9 +13,9 @@
             <h2>¡Bienvenidos a UnsirifaGames!</h2>
             <p>
                 Disfruta de una colección de juegos súper divertidos
-                para personas de todas las edades. ¡A jugar!
+                para <br> personas de todas las edades. ¡A jugar!
             </p>
-            <a href="#" class="btn">Únete ahora</a>
+            <a href="#" id="btn-open-popup" class="btn-open-popup">Únete ahora</a>
         </div>
         <img src="static/images/malan.png">
     </div>
@@ -38,24 +38,24 @@
 </div>
 
 <div class="games">
-    <h2>Juegos Nuestros</h2>
+    <h2>Juegos destacados</h2>
     <div class="card-box">
         <div class="card">
-            <img src="https://play-lh.googleusercontent.com/zPxLgj5nvl20ahJV7aFC6S5mD8kii5CEEDj25j1P9CYAfXL9sdDuO-8eES0r4DhJHrU=s48-rw" srcset="https://play-lh.googleusercontent.com/zPxLgj5nvl20ahJV7aFC6S5mD8kii5CEEDj25j1P9CYAfXL9sdDuO-8eES0r4DhJHrU=s96-rw 2x" class="T75of QhHVZd" aria-hidden="true" alt="Imagen de ícono" itemprop="image" data-iml="511.59999999403954" data-atf="true">
+            <img src="static/images/mc.png">
             <div class="content">
-                <h4>Tic Tac Toe</h4>
+                <h4>Minecraft</h4>
                 <div class="info">
-                    <a href="/tic-tac-toe">Jugar ahora</a>
+                    <a href="#">Jugar ahora</a>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="https://play-lh.googleusercontent.com/i-0HlK6I-K5ZVI28HFa4iXz0T22Mg2WjQ4gMsEYvqmSNdifp2NE41ZiaUCavmbIimQ=w240-h480-rw" srcset="https://play-lh.googleusercontent.com/i-0HlK6I-K5ZVI28HFa4iXz0T22Mg2WjQ4gMsEYvqmSNdifp2NE41ZiaUCavmbIimQ=w480-h960-rw 2x" class="T75of cN0oRe fFmL2e" aria-hidden="true" alt="Imagen de icono" itemprop="image" data-iml="399.8999999985099" data-atf="false">
+            <img src="static/images/mk.jpg">
             <div class="content">
-                <h4>Juego del Dinosaurio</h4>
+                <h4>Mortal Kombat 5</h4>
                 <div class="info">
-                    <a href="/dinosaurio">Jugar ahora</a>
+                    <a href="#">Jugar ahora</a>
                 </div>
             </div>
         </div>
@@ -114,4 +114,3 @@
 </div>
 
 {% endblock %}
-
